--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 	      <meta name="author" content="Ares Enyalius" />
 	      <meta name="viewport" content="width=device-width, initial-scale=1">
 	      <meta name="robots" content="noodp"/>
-        <link rel="canonical" href="http://aresenyalius.es/" />
-        <link rel="next" href="http://aresenyalius.es/" />
+        <link rel="canonical" href="https://aresenyalius.es/" />
+        <link rel="next" href="https://aresenyalius.es/" />
 		
 		<link rel="shortcut icon" href="favicon.ico">
 		
@@ -65,14 +65,14 @@
         <meta property="og:title" content="Ares Enyalius | Historia y crónologia en Mapas." />
         <meta property="og:image" content=""/>
         <meta property="og:description" content="Geocronología." />
-        <meta property="og:url" content="http://aresenyalius.es/" />
+        <meta property="og:url" content="https://aresenyalius.es/" />
         <meta property="og:site_name" content="Ares Enyaliu" />
         <meta property="fb:admins" content="" />
         <meta name="twitter:title" content="Ares Enyalius | Historia y crónologia en Mapas." />
     		<meta name="twitter:image" content="" />
-    		<meta name="twitter:url" content="http://aresenyalius.es/" />
+    		<meta name="twitter:url" content="https://aresenyalius.es/" />
     		<meta name="twitter:card" content="" />
-        <script type='application/ld+json'>{"@context":"http:\/\/schema.org","@type":"WebSite","url":"http:\/\/aresenyalius.es\/","name":"Trips to Places","potentialAction":{"@type":"SearchAction","target":"http:\/\/aresenyalius.es\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
+        <script type='application/ld+json'>{"@context":"https:\/\/schema.org","@type":"WebSite","url":"https:\/\/aresenyalius.es\/","name":"Trips to Places","potentialAction":{"@type":"SearchAction","target":"https:\/\/aresenyalius.es\/?s={search_term_string}","query-input":"required name=search_term_string"}}</script>
     		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     		<!--[if lt IE 9]>
